syntax = "proto3";

package api.budget.v1;

option go_package = "example.com/yourmod/api/budget/v1;budgetv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Request is kept explicit to allow future filters or pagination.
message ListBudgetsRequest {
  // Optional pagination fields for future use
  int32  limit  = 1;
  string cursor = 2;
}

message Budget {
  string id            = 1;
  string name          = 2;
  double amount        = 3;
  string currency      = 4;
  google.protobuf.Timestamp last_updated = 5;
}

message ListBudgetsResponse {
  repeated Budget budgets = 1;
  google.protobuf.Timestamp server_time = 2;
  // Optional pagination token for future use
  string next_cursor = 3;
}

service BudgetService {
  rpc ListBudgets(ListBudgetsRequest) returns (ListBudgetsResponse);
}
